fix: errors propagation
