# services/timegate/src/routes/epoch-engine/list-epoch.ts
@@ -3,7 +3,8 @@ import { EpochEngineService } from '../../services'
 
 export default async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const epochs = await EpochEngineService.fetchEpochs()
+    const errorRate = req.query.errorRate as number | undefined
+    const epochs = await EpochEngineService.fetchEpochs(errorRate)
 
     return res.status(200).json(epochs)
   } catch (err) {
