# services/timegate/src/routes/minds-of-time/list-persons.ts
@@ -3,7 +3,8 @@ import { MindsOfTimeService } from '../../services'
 
 export default async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const prominentPersons = await MindsOfTimeService.fetchProminentPersons()
+    const errorRate = req.query.errorRate as number | undefined
+    const prominentPersons = await MindsOfTimeService.fetchProminentPersons(errorRate)
 
     return res.status(200).json(prominentPersons)
   } catch (err) {
